[gd_scene load_steps=12 format=3 uid="uid://b2m56omrcu8lr"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_bv6p2"]
[ext_resource type="SpriteFrames" uid="uid://d2tsowqgx0ycq" path="res://Player/PlayerSpriteSaved.tres" id="3_6xpi2"]
[ext_resource type="AnimationLibrary" uid="uid://c10qvppetni82" path="res://Player/PlayerAnimationSaved.res" id="4_od33s"]
[ext_resource type="PackedScene" uid="uid://bwhwvvqj2od7u" path="res://Weapons/Weapon.tscn" id="5_cc2db"]
[ext_resource type="Script" path="res://Player/FSM.gd" id="5_ckd0r"]
[ext_resource type="Script" path="res://Player/PlayerStates/PlayerIdle.gd" id="6_bcrpe"]
[ext_resource type="Script" path="res://Player/PlayerStates/PlayerMove.gd" id="7_g0cqa"]
[ext_resource type="Script" path="res://Player/PlayerStates/PlayerAttack1.gd" id="8_ym6h3"]
[ext_resource type="Script" path="res://Player/PlayerStates/PlayerEvade.gd" id="9_mj8we"]
[ext_resource type="Script" path="res://Player/PlayerStates/PlayerBusy.gd" id="10_5i5je"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_rdcvt"]
properties/0/path = NodePath("Label:text")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath(".:hp")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false
properties/3/path = NodePath("AnimatedSprite2D:flip_h")
properties/3/spawn = true
properties/3/sync = true
properties/3/watch = false
properties/4/path = NodePath("AnimationPlayer:current_animation")
properties/4/spawn = true
properties/4/sync = true
properties/4/watch = false

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_bv6p2")

[node name="Label" type="Label" parent="."]
offset_left = -44.0
offset_top = -19.0
offset_right = 43.0
offset_bottom = 7.0
theme_override_font_sizes/font_size = 5
text = "unnamed noob"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.694979, 0.7)
sprite_frames = ExtResource("3_6xpi2")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"PlayerAnimationSaved": ExtResource("4_od33s")
}

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_rdcvt")

[node name="Weapon" parent="." instance=ExtResource("5_cc2db")]
scale = Vector2(1, 1.00613)

[node name="FSM" type="Node2D" parent="." node_paths=PackedStringArray("initial_state", "parentPlayer")]
script = ExtResource("5_ckd0r")
initial_state = NodePath("PlayerIdle")
parentPlayer = NodePath("..")

[node name="PlayerIdle" type="Node" parent="FSM"]
script = ExtResource("6_bcrpe")

[node name="PlayerMove" type="Node" parent="FSM"]
script = ExtResource("7_g0cqa")

[node name="PlayerAttack1" type="Node" parent="FSM"]
script = ExtResource("8_ym6h3")

[node name="PlayerEvade" type="Node" parent="FSM"]
script = ExtResource("9_mj8we")

[node name="PlayerBusy" type="Node" parent="FSM"]
script = ExtResource("10_5i5je")
